--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <h2>紀承瑋
     <span>Peter , Chi</span>
   </h2>
-  <h5>chiwei831221@gmail.com</h5>
+  <h5>Asia, University chiwei831221@gmail.com</h5>
   <hr>
   <p></p>
   <div class="circle circle1"></div>
