--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <div class="mark">NAMECARD</div>
 <div class="namecard">
   <h2>紀承瑋
-    <span>Peter , Chi</span>
+    <span>Wei , Chi</span>
   </h2>
   <h5>Asia, University chiwei831221@gmail.com</h5>
   <hr>
